6th section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,10 @@ ul li{
         font-size: 0.5rem;
     }
     .heading p{
-        font-size: 0.3rem;
+        font-size: 0.2rem;
+    }
+    .ipadimage{
+        width: 100px;
     }
 }
 .text{
@@ -107,4 +110,14 @@ ul li{
    margin-top: 10rem;
    text-align: center;
 
+}
+.giftbox{
+    padding: 10rem;
+}
+.redembtn{
+    background-color: #281154;
+    color: #f0f8ff;
+    padding: 0.5rem;
+    border: none;
+    width: 5rem;
 }
