project almost done

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,3 +121,12 @@ ul li{
     border: none;
     width: 5rem;
 }
+.footer{
+    background-color: rgb(27,0,88);
+    padding-left: 5rem;
+}
+.
+hr{
+    color: #f0f8ff;
+    font-weight: bolder;
+}
